--- a/portal/chat.html
+++ b/portal/chat.html
@@ -61,6 +61,24 @@
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
+      position: relative;
+    }
+
+    body.app-bg-forest::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: calc(env(safe-area-inset-top) + 56px);
+      background: linear-gradient(
+        to bottom,
+        rgba(6, 7, 6, 0.95),
+        rgba(6, 7, 6, 0.65),
+        rgba(6, 7, 6, 0.0)
+      );
+      pointer-events: none;
+      z-index: 0;
     }
 
     .app {
@@ -69,12 +87,14 @@
       display: flex;
       flex-direction: column;
       gap: 8px;
+      position: relative;
+      z-index: 1;
     }
 
     /* 상단 패널 */
 
     .top-panel {
-      background: rgba(24, 26, 24, 0.55);
+      background: rgba(12, 14, 12, 0.60);
       border-radius: 18px;
       padding: 10px 14px;
       display: flex;
@@ -84,7 +104,7 @@
       backdrop-filter: blur(16px) saturate(140%);
       -webkit-backdrop-filter: blur(16px) saturate(140%);
       box-shadow: 0 18px 40px rgba(5, 7, 6, 0.55);
-      transition: max-height 0.25s ease, opacity 0.25s ease;
+      transition: max-height 0.25s ease, opacity 0.25s ease, background-color 0.2s ease;
     }
 
 
