--- a/portal/chat.html
+++ b/portal/chat.html
@@ -1020,6 +1020,9 @@
       const wrap = bubble.closest(".bubble-wrap");
       if (!wrap) return;
 
+      // 이전 롱프레스 상태 초기화
+      cancelLongPress();
+
       longPressTargetBubble = bubble;
       bubble.classList.add("press-feedback");
 
@@ -1033,7 +1036,6 @@
       longPressStartX = point.clientX;
       longPressStartY = point.clientY;
 
-      cancelLongPress();
       longPressTimer = setTimeout(() => {
         openBubbleMenuForWrap(longPressTargetWrap);
         longPressTimer = null;
