--- a/portal/chat.html
+++ b/portal/chat.html
@@ -70,11 +70,11 @@
       top: 0;
       left: 0;
       right: 0;
-      height: calc(env(safe-area-inset-top) + 56px);
+      height: calc(env(safe-area-inset-top) + 80px);
       background: linear-gradient(
         to bottom,
-        rgba(6, 7, 6, 0.95),
-        rgba(6, 7, 6, 0.65),
+        rgba(6, 7, 6, 0.98),
+        rgba(6, 7, 6, 0.78),
         rgba(6, 7, 6, 0.0)
       );
       pointer-events: none;
@@ -94,7 +94,7 @@
     /* 상단 패널 */
 
     .top-panel {
-      background: rgba(12, 14, 12, 0.60);
+      background: rgba(12, 14, 12, 0.72);
       border-radius: 18px;
       padding: 10px 14px;
       display: flex;
@@ -105,6 +105,7 @@
       -webkit-backdrop-filter: blur(16px) saturate(140%);
       box-shadow: 0 18px 40px rgba(5, 7, 6, 0.55);
       transition: max-height 0.25s ease, opacity 0.25s ease, background-color 0.2s ease;
+      margin-top: -6px; /* 그라데이션 속으로 살짝 파묻혀 보이게 */
     }
 
 
@@ -369,8 +370,8 @@
     }
 
     .typing-dot {
-      width: 4px;
-      height: 4px;
+      width: 6px;
+      height: 6px;
       border-radius: 999px;
       background: currentColor;
       opacity: 0.25;
