--- a/portal/chat.html
+++ b/portal/chat.html
@@ -762,6 +762,7 @@
 </head>
 <body class="app-bg-forest">
   <div class="app">
+    <input type="file" id="bgImageInput" accept="image/*" style="display:none" />
     <!-- 상단 세이지 패널 -->
     <header class="top-panel">
       <div class="top-panel-row">
@@ -774,6 +775,9 @@
             <span class="status-dot"></span>
             <span>ONLINE</span>
           </div>
+          <button class="icon-btn" type="button" id="bgChangeBtn">
+            🎨<span>BG</span>
+          </button>
           <button class="icon-btn" type="button">
             📞<span>Call</span>
           </button>
@@ -857,6 +861,10 @@
     const pullIndicator = document.getElementById("pullIndicator");
     const uploadProfileSelect = document.getElementById("uploadProfileSelect");
 
+    const bodyEl = document.body;
+    const bgImageInput = document.getElementById("bgImageInput");
+    const bgChangeBtn = document.getElementById("bgChangeBtn");
+
     const TYPING_ROW_ID = "assistant-typing";
 
     const STORAGE_KEY = "director_chat_messages_v2";
@@ -868,6 +876,7 @@
     const HISTORY_PAGE_SIZE = 40;
     let visibleStartIndex = 0;
     let isLoadingOlder = false;
+    let currentBgObjectUrl = null;
 
     // 업로드 프로필 초기화 (localStorage에서 불러오기)
     if (uploadProfileSelect) {
@@ -884,6 +893,45 @@
         } catch (_) {
           // ignore
         }
+      });
+    }
+
+    // 배경 이미지 변경: 아이폰 사진첩에서 선택해서 현재 세션 배경으로 사용
+    if (bgChangeBtn && bgImageInput && bodyEl) {
+      bgChangeBtn.addEventListener("click", () => {
+        bgImageInput.click();
+      });
+
+      bgImageInput.addEventListener("change", (e) => {
+        const input = e.target;
+        const file = input.files && input.files[0];
+        if (!file || !file.type || !file.type.startsWith("image/")) {
+          // 이미지가 아니면 무시
+          input.value = "";
+          return;
+        }
+
+        // 이전 배경 URL 정리
+        if (currentBgObjectUrl) {
+          try {
+            URL.revokeObjectURL(currentBgObjectUrl);
+          } catch (_) {
+            // ignore
+          }
+          currentBgObjectUrl = null;
+        }
+
+        const url = URL.createObjectURL(file);
+        currentBgObjectUrl = url;
+
+        // body 배경을 선택한 이미지로 교체 (노치 아래 전체를 채우는 용도)
+        bodyEl.style.backgroundImage = `url("${url}")`;
+        bodyEl.style.backgroundSize = "cover";
+        bodyEl.style.backgroundPosition = "center";
+        bodyEl.style.backgroundRepeat = "no-repeat";
+
+        // 같은 파일 다시 선택해도 change 이벤트가 뜨도록 초기화
+        input.value = "";
       });
     }
 
