--- a/portal/chat.html
+++ b/portal/chat.html
@@ -779,7 +779,7 @@
   <div class="app">
     <input type="file" id="bgImageInput" accept="image/*" style="display:none" />
     <!-- 상단 세이지 패널 -->
-    <header class="top-panel">
+    <header class="top-panel collapsed">
       <div class="top-panel-row">
         <div>
           <div class="top-title-main">SPACETIME DIRECTOR</div>
