--- a/portal/chat.html
+++ b/portal/chat.html
@@ -109,18 +109,10 @@
       cursor: pointer;
     }
 
-    /* 상단 패널이 요약(접힘) 상태일 때 */
-    .top-panel.collapsed {
-      padding: 6px 10px;
-      gap: 2px;
-    }
-
-    .top-panel.collapsed .top-title-sub {
-      display: none;
-    }
-
-    .top-panel.collapsed .top-actions .icon-btn {
-      display: none;
+    /* 상단 패널이 확장 상태일 때 (기본보다 조금 더 넓게) */
+    .top-panel.expanded {
+      padding: 14px 16px;
+      gap: 10px;
     }
 
 
@@ -950,20 +942,20 @@
       });
     }
 
-    // 상단 패널 요약/펼침 토글 (요약 모드: 부감독 상태 + API 사용량 위주)
-    const topPanel = document.querySelector('.top-panel');
+    // 상단 패널 확장/기본 토글 (기본: 지금 크기, 클릭 시 조금 더 넓게)
+    const topPanel = document.querySelector(".top-panel");
     if (topPanel) {
-      let isTopPanelCollapsed = false;
+      let isTopPanelExpanded = false;
       topPanel.addEventListener("click", (e) => {
-        // 아이콘 버튼(배경/전화)을 누를 때는 접힘 토글을 막는다
+        // 아이콘 버튼(배경/전화)을 누를 때는 토글 막기
         if (e.target.closest(".icon-btn")) {
           return;
         }
-        isTopPanelCollapsed = !isTopPanelCollapsed;
-        if (isTopPanelCollapsed) {
-          topPanel.classList.add("collapsed");
+        isTopPanelExpanded = !isTopPanelExpanded;
+        if (isTopPanelExpanded) {
+          topPanel.classList.add("expanded");
         } else {
-          topPanel.classList.remove("collapsed");
+          topPanel.classList.remove("expanded");
         }
       });
     }
