--- a/portal/chat.html
+++ b/portal/chat.html
@@ -82,7 +82,7 @@
     }
 
     .app {
-      height: 100dvh; /* iOS 홈 화면 앱에서 노치 포함 전체 화면 */
+      height: calc(var(--vh) * 100); /* 실제 뷰포트 높이에 맞춰 키보드 등장 시에도 자연스럽게 줄어들도록 */
       padding: calc(env(safe-area-inset-top) - 4px) 12px calc(12px + env(safe-area-inset-bottom));
       display: flex;
       flex-direction: column;
@@ -885,6 +885,16 @@
     let isLoadingOlder = false;
     let currentBgObjectUrl = null;
 
+    // 뷰포트 높이 동기화: 키보드가 올라와도 .app 높이를 실제 화면에 맞게 조정
+    function updateViewportHeight() {
+      const vh = window.innerHeight * 0.01;
+      document.documentElement.style.setProperty("--vh", `${vh}px`);
+    }
+
+    updateViewportHeight();
+    window.addEventListener("resize", updateViewportHeight);
+    window.addEventListener("orientationchange", updateViewportHeight);
+
     // 업로드 프로필 초기화 (localStorage에서 불러오기)
     if (uploadProfileSelect) {
       const savedProfile = localStorage.getItem(UPLOAD_PROFILE_KEY);
@@ -1575,6 +1585,13 @@
 
     inputEl.addEventListener("input", autoResizeInput);
     autoResizeInput();
+
+    // 입력창 포커스 시, 키보드가 올라와도 마지막 메시지가 보이도록 살짝 내려줌
+    inputEl.addEventListener("focus", () => {
+      setTimeout(() => {
+        scrollToBottom();
+      }, 80);
+    });
 
     // 엔터로 전송, Shift+Enter 줄바꿈
     inputEl.addEventListener("keydown", (e) => {
