채팅전체화면

--- a/portal/chat.html
+++ b/portal/chat.html
@@ -16,7 +16,7 @@
   <meta http-equiv="Expires" content="0">
   <!-- iOS 홈 화면 / 풀스크린용 메타 -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="Spacetime Director" />
   <!-- (선택) 아이콘 파일이 있을 경우 이 경로에 두면 홈화면 아이콘 사용 가능 -->
   <link rel="apple-touch-icon" href="/static/icons/app-icon-192.png" />
@@ -772,7 +772,7 @@
   <div class="app">
     <input type="file" id="bgImageInput" accept="image/*" style="display:none" />
     <!-- 상단 세이지 패널 -->
-    <header class="top-panel collapsed">
+    <header class="top-panel">
       <div class="top-panel-row">
         <div>
           <div class="top-title-main">SPACETIME DIRECTOR</div>
