채팅전체화면

--- a/portal/chat.html
+++ b/portal/chat.html
@@ -53,7 +53,7 @@
 
     /* 노치 뒤 배경은 html이 먹기 때문에, html은 어두운 색으로 고정 */
     html {
-      background: #050605;
+      background: transparent;
     }
 
     body {
