--- a/portal/chat.html
+++ b/portal/chat.html
@@ -257,7 +257,7 @@
       -webkit-backdrop-filter: blur(18px);
       overflow-y: auto;
       overflow-x: hidden;
-      -webkit-overflow-scrolling: touch;
+      -webkit-overflow-scrolling: auto; /* iOS 고무줄/미끌미끌 효과 줄이기 */
       font-size: 13px;
       position: relative;
     }
